added images, added description

--- a/index.html
+++ b/index.html
@@ -21,11 +21,58 @@
 
 <p>В далеком 2004 году (12 лет назад) по этому адресу располагался мой самописный сайт. Это было время PHP4, Денвера и Windows XP.</p>
 
+<p>Домены 3-уровня (pp.ru, com.ru, net.ru) тогда находились в ведении RIPN и раздавались бесплатно. Но процесс регистрации был жутко забюрократизирован, но регать их все же было возможно. Позже примерно в 2005-2006 годах было введено ограничение на кол-во суточных регистраций. Чтобы регнуть домен приходилось ждать полуночи по МСК и быстро отправлять заранее заготовленную заявку. И все это приходилось делать с диалап-модема т.к. выделенку в наши края тогда еще не завезли.</p>
+
 <p>К сожалению исходников того чудо-движка не сохранилось. А я бы хотел посмотреть их и посмеяться =)</p>
 
-<p>За 8 лет сайт эволюционировал с откровенноо УГ до... блога на Wordpress. А потом домены .pp.ru внезапно стали платными и я решил отказаться от домена. В 2016 году я как то в случайном порыве снова его регнул и наверное так его и оставлю себе на память.</p>
+<p>За 8 лет сайт эволюционировал с откровенного УГ до... блога на WordPress. А потом домены .pp.ru внезапно стали платными и я решил отказаться от домена. В 2016 году я как то в случайном порыве снова его регнул и наверное так его и оставлю себе на память.</p>
 
-<p>Чуть ниже будет ссылка на archive.org любезно сохранивший снимки сайта за разные годы, но в России ZOG уже постарался чтобы вебархив был надежно заблокирован на терриории РФ. Так что продублирую все скриншотами, если не забуду.</p>
+<p>Чуть ниже будет ссылка на archive.org любезно сохранивший снимки сайта за разные годы, но в России ZOG уже постарался чтобы веб архив был надежно заблокирован на территории РФ. Так что продублирую все скриншотами, если не забуду.</p>
+
+<h3>А вот и скриншоты сайта за разные годы в хронологическом порядке:</h3>
+
+<strong>07.02.2006</strong>
+<p>Это самый ранний из сохраненных скриншотов сайта. К сожалению первый оптимизированный под IE бело-красный вариант нигде не сохранился :(
+  Тут же видно что я начал пилить темы оформления для Sony Ericsson k300, файлы с сайта отдаю через download.php учитывающий скачивания и запилил какой-то простецкий скрипт для проведения опросов.</p>
+<p class="centered">
+  <a href="/images/07022006railpage.png" target="_blank"><img src="/images/07022006railpage_thumbnail.png"></a>
+</p>
+
+<strong>13.08.2006</strong>
+<p>Тут сайт из синюшного превратился в белый. Его кривой код переписан. Выпилена куча ненужных функций. Добавлен самописный чудо скрипт со статистикой посещений сайта выводящий графики по ОС, юзерагентам и прочим характеристикам.</p>
+<p class="centered">
+  <a href="/images/13082006railpage.png" target="_blank"><img src="/images/13082006railpage_thumbnail.png"></a>
+</p>
+
+<strong>12.12.2007</strong>
+<p>Год не прошел зря. Видно что у новостей появилась пагинация и комментарии. Также видно что на одной из новости спамеры накрутили 1311 комментов. Дата обновления сайта в левом нижнем углу по всей видимости не работает.</p>
+<p class="centered">
+  <a href="/images/12122007railpage.png" target="_blank"><img src="/images/12122007railpage_thumbnail.png"></a>
+</p>
+
+<strong>30.12.2008</strong>
+<p>Еще через год я выпилил табличную верстку и оставил сайт в минимально рабочем виде. Страшный и пустой)</p>
+<p class="centered">
+  <a href="/images/30122008railpage.png" target="_blank"><img src="/images/30122008railpage_thumbnail.png"></a>
+</p>
+
+<strong>14.04.2009</strong>
+<p>За последующие полгода ничего не произошло. Сайт выглядит так же убого и на нем постятся мной какие-то невнятные новости.</p>
+<p class="centered">
+  <a href="/images/14042009railpage.png" target="_blank"><img src="/images/14042009railpage_thumbnail.png"></a>
+</p>
+
+<strong>17.04.2010</strong>
+<p>Ровно через год на месте старого самописа внезапно вырос бложек на WordPress. С более-менее приятной (чужой) темой оформления и моими постами.</p>
+<p class="centered">
+  <a href="/images/17042010railpage.png" target="_blank"><img src="/images/17042010railpage_thumbnail.png"></a>
+</p>
+
+<strong>09.10.2011</strong>
+<p>А вот это скрин последнего обновления сайта. К этому времени я работал в IT-конторе и уже начал пилить hamdeew.ru. Этот же сайт провисел в открытом доступе и без обновлений до конца 2011 года когда Ру-Центр объявил о том что домены pp.ru теперь в его ведении и становятся платными. Продлять его дальше я не стал.</p>
+<p class="centered">
+  <a href="/images/09102011railpage.png" target="_blank"><img src="/images/09102011railpage_thumbnail.png"></a>
+</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/rhamdeew/railpage">Railpage.pp.ru</a> is maintained by <a href="https://github.com/rhamdeew">rhamdeew</a>.</span>
